--- a/GuiaDigital/src/scss/layout/_footer.scss
+++ b/GuiaDigital/src/scss/layout/_footer.scss
@@ -1,5 +1,6 @@
 .footer{
     background-color: $azulOscuro;
+    margin-bottom: 0;
 
     .navegacion{
         justify-content: center;
@@ -12,5 +13,6 @@
     .copyright{
         color: $blanco;
         text-align: center;
+        margin-bottom: 0;
     }
 }
