Ajuste de código

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -10,4 +10,11 @@
 @import 'layout/navegacion';
 @import 'layout/iconos';
 @import 'layout/acordeon';
+@import 'internas/bienvenida';
 @import 'internas/contenido';
+@import 'internas/examen';
+@import 'internas/iniciar_sesion';
+@import 'internas/inicio_loggeado';
+@import 'internas/MenuSim';
+@import 'internas/registro_usuarios';
+@import 'internas/retroalimentacion';
