--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -15,6 +15,14 @@
 .contenido-header{
     max-width: 100%;
     margin: 0 auto;
+
+    .navegacion{
+        a{
+            &:hover{
+                border-bottom: 0.2rem solid $azulOscuro;
+            }
+        }
+    }
 }
 
 .titulo{
