--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -17,6 +17,7 @@ $gris: #e1e1e1;
 $grisOscuro: #333333;
 $azulClaro: #237BBB;
 $azulOscuro: #004C84;
+$rojo: rgb(189, 7, 7);
 $razonamiento_verbal: #68B4EB;
 $razonamiento_matematico: #68EB8C;
 $espanol: #EBAE68;
