--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -18,3 +18,4 @@
 @import 'internas/MenuSim';
 @import 'internas/registro_usuarios';
 @import 'internas/retroalimentacion';
+@import 'internas/invitado';
