--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -19,3 +19,4 @@
 @import 'internas/registro_usuarios';
 @import 'internas/retroalimentacion';
 @import 'internas/invitado';
+@import 'internas/progreso';
