--- a/src/scss/internas/_invitado.scss
+++ b/src/scss/internas/_invitado.scss
@@ -35,13 +35,14 @@
             }
             @include desktop{
                 width: 40%;
-                height: 40rem;
+                height: 45rem;
             }
             
             h3{
                 font-weight: 700;
                 color: $azulOscuro;
                 margin-top: 0;
+                padding-top: 2rem;
             }
 
             p{
@@ -61,15 +62,12 @@
 
         .contenedor-imagen{
             background-color: $azulClaro;
-            width: 10rem;
-            height: 10rem;
+            min-width: 10rem;
+            min-height: 10rem;
             border-radius: 100%;
             display: flex;
             align-items: center;
             margin-top: -8rem;
-            @include desktop{
-                width: 8rem;
-            }
 
             img{
                 width: 6rem;
