--- a/src/scss/layout/_acordeon.scss
+++ b/src/scss/layout/_acordeon.scss
@@ -38,7 +38,7 @@
             &::after{
                 width: 2rem;
                 height: 2rem;
-                background-image: url("/src/img/download.svg");
+                background-image: url("/build/img/download.svg");
                 background-size: 2rem;
             }
         }
