--- a/src/scss/internas/_examen.scss
+++ b/src/scss/internas/_examen.scss
@@ -12,12 +12,12 @@
     margin: 10px 0;
 }
 
-.preguntas {
+.preguntas-examen {
     display: none;
     margin-left: 10px;
 }
 
-.pregunta {
+.pregunta-examen {
     display: inline-block;
     width: 30px;
     height: 30px;
